fix div cutoff problem

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -1,5 +1,5 @@
 .mainDiv {
-    height: 100%;
+    height: 100vh;
 }
 
 .title {
